fix overflow on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,7 @@ hr.menu {
 .slider-container {
     width:100%;
     height: auto;
+    overflow: hidden;
 }
 
 .image-slider-container {
